ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction1/input.ts.stderr
error: Expected a type
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction1/input.ts:1:13
  |
1 | var v = (a: ) => {
  |             ^

error[1128]: Declaration or statement expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction1/input.ts:1:13
  |
1 | var v = (a: ) => {
  |             ^

